# proyecto_ia

./: COMMANDS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  agent.py  config.py  main.py  prompts.py  tools.py
deployment/: cloud_run_service.yaml  cloudbuild.yaml
deployment/mlops/: __init__.py  deploy.py  pipeline.py
eval/: adk_playground.py  eval_runner.py
eval/ground_truth/: caso_01_flotilla_mediana.json  caso_02_flotilla_grande_excel.json  caso_03_word_datos_incompletos.json
eval/samples/: README.md
eval/test_cases/: __init__.py  test_excel_submission.py  test_pdf_submission.py  test_word_submission.py
infra/: main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
infra/modules/cloud_run/: main.tf  variables.tf
infra/modules/firestore/: main.tf  variables.tf
infra/modules/storage/: main.tf  variables.tf
infra/modules/vertex_ai/: main.tf  variables.tf
tests/: test_agent.py  test_tools.py
